--- a/src/pages/addPlan/addPlan.scss
+++ b/src/pages/addPlan/addPlan.scss
@@ -2,16 +2,20 @@
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/loading.scss";
+@import "~taro-ui/dist/style/components/modal.scss";
+@import "~taro-ui/dist/style/components/calendar.scss";
 
 .container{
     .content{
         height: 60vh;
         width: 100%;
+        .calender{
+            background-color: rgb(255, 255, 255);
+        }
     }
     .submitBtn{
         width: 100%;
         .btn{
-            color: black;
             width: 40vw;
             border-radius: 25px 25px;
             background-color: rgb(0, 122, 204);
