--- a/src/pages/addPlan/addPlan.scss
+++ b/src/pages/addPlan/addPlan.scss
@@ -9,16 +9,17 @@
     .content{
         height: 60vh;
         width: 100%;
-        .calender{
-            background-color: rgb(255, 255, 255);
-        }
-    }
-    .submitBtn{
-        width: 100%;
-        .btn{
-            width: 40vw;
-            border-radius: 25px 25px;
-            background-color: rgb(0, 122, 204);
+        .formX{
+            height: 100%;
+            .calender{
+                background-color: rgb(255, 255, 255);
+            }
+            .submitBtn{
+                margin-top: 36vh;
+                width: 40vw;
+                border-radius: 25px 25px;
+                background-color: rgb(0, 122, 204);
+            } 
         }
     }
 }
